--- a/index.html
+++ b/index.html
@@ -1,4 +1,19 @@
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>d-kolos.github.io</title>
+    <style>.refresh { display: inline-block; transform: rotate(90deg); }</style>
+</head>
+<body>
 <h1>d-kolos.github.io</h1>
+<p><a href="./">Reload <span class="refresh">↻</span></a></p>
 <pre>
 2021, 2022, 2023
 </pre>
+
+</body>
+</html>
