--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 <body>
 <h1>d-kolos.github.io</h1>
-<p><a href="./">Reload <span class="refresh">↻</span></a></p>
+<p><a href="./">Reload <span class="refresh">↻</span></a>&nbsp;</p>
 <pre>
 2021, 2022, 2023
 </pre>
 
+<br>
 </body>
 </html>
