--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>d-kolos.github.io</title>
-    <style>.refresh { display: inline-block; transform: rotate(90deg); }</style>
+    <style>
+        .refresh { display: inline-block; transform: rotate(90deg); }
+        .main { width: fit-content; margin: 0 auto; }
+    </style>
 </head>
 <body>
-<h1>d-kolos.github.io</h1>
-<p><a href="./">Reload <span class="refresh">↻</span></a>&nbsp;</p>
-<pre>
-2021, 2022, 2023
-</pre>
-
-<br>
+<div class="main">
+    <h1>d-kolos.github.io</h1>
+    <p><a href="./">Reload <span class="refresh">↻</span></a>&nbsp;</p>
+    <p>2021, 2022, 2023</p>
+</div>
+<div>
+    <p>&nbsp;</p>
+</div>
 </body>
 </html>
